--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -1,7 +1,7 @@
 @article{franklin-1963,
  ISSN = {00255718, 10886842},
  URL = {http://www.jstor.org/stable/2003733},
- author = {Joel N. Franklin},
+ author = {J. N. Franklin},
  journal = {Mathematics of Computation},
  number = {81},
  pages = {28--59},
@@ -12,11 +12,10 @@
 }
 
 @Article{knuth-1965,
-  author="Knuth, Donald E.",
+  author="Knuth, D. E.",
   title="Construction of a Random Sequence",
   journal="BIT Numerical Mathematics",
   year="1965",
-  month="Dec",
   day="01",
   volume="5",
   number="4",
@@ -31,10 +30,9 @@
   author = {L'Ecuyer, Pierre and Simard, Richard},
   title = {{TestU01}: A {C} Library for Empirical Testing of Random Number Generators},
   journal = {ACM Trans. Math. Softw.},
-  issue_date = {August 2007},
+  issue_date = {2007},
   volume = {33},
   number = {4},
-  month = aug,
   year = {2007},
   issn = {0098-3500},
   pages = {22:1--22:40},
@@ -52,10 +50,9 @@
   author = {Matsumoto, M. and Nishimura, T.},
   title = {{Mersenne Twister}: A 623-dimensionally Equidistributed Uniform Pseudo-random Number Generator},
   journal = {ACM Trans. Model. Comput. Simul.},
-  issue_date = {Jan. 1998},
+  issue_date = {1998},
   volume = {8},
   number = {1},
-  month = jan,
   year = {1998},
   issn = {1049-3301},
   pages = {3--30},
@@ -69,11 +66,10 @@
 }
 
 @article{weyl-1916,
-  author="Weyl, Hermann",
+  author="Weyl, H.",
   title="{\"U}ber die {G}leichverteilung von {Z}ahlen mod. {E}ins",
   journal="Mathematische Annalen",
   year="1916",
-  month="Sep",
   day="01",
   volume="77",
   number="3",
@@ -90,7 +86,6 @@
   ISSN="",
   publisher="",
   year="1946",
-  month="",
   volume="49",
   number="",
   pages="758-764",
@@ -127,7 +122,7 @@
 }
 
 @article{fredricksen-1978,
-  title = "Necklaces of beads in k colors and k-ary de Bruijn sequences",
+  title = "Necklaces of beads in $k$ colors and $k$-ary de Bruijn sequences",
   journal = "Discrete Mathematics",
   volume = "23",
   number = "3",
@@ -176,7 +171,6 @@
   author = "Martin, M. H.",
   fjournal = "Bulletin of the American Mathematical Society",
   journal = "Bull. Amer. Math. Soc.",
-  month = "12",
   number = "12",
   pages = "859--864",
   publisher = "American Mathematical Society",
@@ -190,7 +184,6 @@
   author = "Tijdeman, R.",
   fjournal = "Bulletin of the American Mathematical Society",
   journal = "Bull. Amer. Math. Soc.",
-  month = "07",
   number = "4",
   pages = "672--675",
   publisher = "American Mathematical Society",
