Error de spelling.

--- a/tex/tesis.tex
+++ b/tex/tesis.tex
@@ -385,7 +385,7 @@ Consider sufficiently large values of $N$ such that $k < r$. This is always poss
 
 Note that $S^{(1)}$ and $S^{(3)}$ can potentially be empty, such as when $k = 1$ or $q = 0$, respectively.
 
-We denote the cummulative sums of the sizes of the sequences defined above as $n_0 = 0$, and $n_j = n_{j - 1} + |S^{(j)}|$ for $j = 1, 2, 3, 4$. Now, we can similarly decompose $\nu_N$ into five parts:
+We denote the cumulative sums of the sizes of the sequences defined above as $n_0 = 0$, and $n_j = n_{j - 1} + |S^{(j)}|$ for $j = 1, 2, 3, 4$. Now, we can similarly decompose $\nu_N$ into five parts:
 
 \begin{equation}\label{equation:nu-n-split-five-parts}
   \begin{aligned}
